Improve message deletion and pruning code
move message deletion safety logic from Message class and JSP into messaging controller
improve MessageDeletionPolicy interface and allow combined use of deletion criteria
make some naming changes for consistency

--- a/core/src/main/resources/MessagingResources_pt.properties
+++ b/core/src/main/resources/MessagingResources_pt.properties
@@ -42,7 +42,7 @@ message.template.message.wrapper.parameter.subjectContent = O conteúdo do assunt
 message.template.message.wrapper.subject = {{subjectContent}}
 message.template.message.wrapper.text = {{textContent}}\n\n---\nEsta mensagem foi enviada em nome do(a) {{sender}}, para os seguintes destinatários:{% for recipient in recipients %}\n\t{{recipient}}{% endfor %}
 
-name.deletion.policy.messages = até {0} mensagens
+name.deletion.policy.amount = até {0} mensagens
 name.deletion.policy.period = durante {0}
 name.deletion.policy.unlimited = ilimitado
 
