Project clean up and minor fixes and improvements
Improve the module's public API
	Rename and refactor domain object attributes and methods for consistency and clarity
	Restrict and standardize access and construction of domain objects
	Prevent arbitrary replacement of system sender favouring configuration of specific controlled sender
	Introduce static getters for visible domain object collections in related domain classes and prevent modification to original domain relations
	Introduce static methods for domain object construction, returning builders for complex classes
	Ensure null safety and simple valid null object construction in domain object builders
	Internalize MessageTemplateDeclaration into MessageTemplate to clarify their bond and prevent misuse
	Remove Comparator classes from domain classes in favour of the Comparable interface and natural ordering
	Remove all sorting and sorted collection getters from domain and UI classes
	Introduce sorter taglib to encapsulate basic sorting behaviours to be used by the view
	Remove superfluous UI class MessageTemplateDescriptionBean
Fix system sender bootstrap section
	Report multiple errors
	Link errors to proper section
	Add invalid members group error
Organize packages
	Move MessageDispatcher to own package as it's not part of the domain and to accentuate it's importance
	Remove superfluous package template.annotation and moved contents to parent
Code improvements
	Rename and refactor attributes, variables, properties and methods for consistency and clarity
	Promote use of streams and method references when applicable
	Promote use of Collection over subinterfaces when their specific characteristics are irrelevant
	Simplify and move core logic of template initialization to MessageTemplate class
	Simplify MessageTemplate compilation code
	Prevent NullPointerException in dispatch and MessageTask when no dispatcher is assigned
	Avoid creation of multiple "null" (unlimited) MessageDeletionPolicy objects as they are ef

--- a/core/src/main/resources/MessagingResources_pt.properties
+++ b/core/src/main/resources/MessagingResources_pt.properties
@@ -1,8 +1,11 @@
 error.bootstrapper.systemsender.address.empty = Endereço do remetente é necessário.
-error.bootstrapper.systemsender.name.empty = Nome do remetente é necessário.
+error.bootstrapper.systemsender.address.invalid = Endereço do remetente não é válido.
 error.bootstrapper.systemsender.group.empty = Grupo de envio é necessário.
-error.message.null.sender = Tentativa de envio de mensagem sem remetente.
-error.message.validation.bcc.invalid = Endereço de e-mail não é válido: {0}.
+error.bootstrapper.systemsender.group.invalid = Expressão do grupo de envio não é válida.
+error.bootstrapper.systemsender.name.empty = Nome do remetente é necessário.
+error.message.null.address = Tentativa de criação de remetente sem endereço.
+error.message.null.sender = Tentativa de criação de mensagem sem remetente.
+error.message.validation.recipient.single.invalid = Endereço de e-mail não é válido: {0}.
 error.message.validation.message.empty = Corpo da mensagem é necessário.
 error.message.validation.html.forbidden = Este remetente não está autorizado a enviar mensagens HTML.
 error.message.validation.recipients.empty = É necessário pelo menos um destinatário.
@@ -40,7 +43,7 @@ message.template.message.wrapper.parameter.sender = O nome do remetente da mensa
 message.template.message.wrapper.parameter.textContent = O conteúdo textual simples da mensagem.
 message.template.message.wrapper.parameter.subjectContent = O conteúdo do assunto da mensagem.
 message.template.message.wrapper.subject = {{subjectContent}}
-message.template.message.wrapper.text = {{textContent}}\n\n---\nEsta mensagem foi enviada em nome do(a) {{sender}}, para os seguintes destinatários:{% for recipient in recipients %}\n\n\t{{recipient}}{% endfor %}
+message.template.message.wrapper.text = {{textContent}}\n\n---\nEsta mensagem foi enviada em nome do(a) {{sender}}{% if recipients is not empty %}, para os seguintes destinatários:{% for recipient in recipients %}\n\n\t{{recipient}}{% endfor %}{% else %}.{% endif %}
 
 name.deletion.policy.amount = até {0} mensagens
 name.deletion.policy.period = durante {0}
