--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -19,19 +19,19 @@ error.sender.not.saved = Sender configuration could not be saved:
 hint.email = someone@example.com
 hint.email.list = someone@example.com, ...
 hint.group.expression = Group Expression
-hint.period = 1Y2M3D4H
+hint.period = nYnMnWnDTnHnMnS
 hint.sender.select = Select a sender
 
 label.actions = Other Actions
 label.items = items
-label.message.bccs = Recipients (Bcc)
-label.message.bccs.extra = Other Recipients (Bcc)
-label.message.bccs.extra.locale = Other Recipients Locale
-label.message.body = Message
+label.message.recipients = Recipients
+label.message.recipients.single = Other Recipients
 label.message.body.html = HTML Message
+label.message.body.text = Message
 label.message.ccs = Recipients (Cc)
 label.message.created = Created
 label.message.locale = Content Locales
+label.message.locale.preferred = Preferred Locale
 label.message.replyTo = Reply to
 label.message.sender = Sender
 label.message.sender.name = Sender Name
@@ -67,8 +67,9 @@ label.yes = Yes
 
 notification.message.sent = This message has been queued for sending. While it is not dispatched you may delete it, canceling the process.
 notification.template.empty = This message template is empty. Attempts to send it will fail reporting an error.
-notification.template.subject.empty = This message template's subject is empty. Attempts to send it will fail reporting an error.
-notification.template.body.empty = This message template's body is empty. Attempts to send it will fail reporting an error.
+notification.template.empty.body = This message template's body is empty. Attempts to send it will fail reporting an error.
+notification.template.empty.subject = This message template's subject is empty. Attempts to send it will fail reporting an error.
+notification.template.undeclared = This message template was not declared in the application's code base.
 
 title.message = Message
 title.message.new = New Message
