--- a/core/src/main/resources/MessagingResources_en.properties
+++ b/core/src/main/resources/MessagingResources_en.properties
@@ -1,8 +1,11 @@
 error.bootstrapper.systemsender.address.empty = Sender address is required.
+error.bootstrapper.systemsender.address.invalid = Sender address is not valid.
 error.bootstrapper.systemsender.group.empty = Sender group is required.
+error.bootstrapper.systemsender.group.invalid = Sender group expression is not valid.
 error.bootstrapper.systemsender.name.empty = Sender name is required.
-error.message.null.sender = Attempt to send a message without a sender.
-error.message.validation.bcc.invalid = E-mail address is not valid: {0}.
+error.message.null.address = Attempt to create a sender without an address.
+error.message.null.sender = Attempt to create a message without a sender.
+error.message.validation.recipient.single.invalid = E-mail address is not valid: {0}.
 error.message.validation.message.empty = Message body is required.
 error.message.validation.html.forbidden = This sender is not allowed to send HTML messages.
 error.message.validation.recipients.empty = At least one recipient is required.
@@ -40,7 +43,7 @@ message.template.message.wrapper.parameter.sender = Name of the message sender.
 message.template.message.wrapper.parameter.textContent = The plain text content of the message.
 message.template.message.wrapper.parameter.subjectContent = The content of the message subject.
 message.template.message.wrapper.subject = {{subjectContent}}
-message.template.message.wrapper.text = {{textContent}}\n\n---\nThis message was sent by {{sender}}, to the following recipients:{% for recipient in recipients %}\n\n\t{{recipient}}{% endfor %}
+message.template.message.wrapper.text = {{textContent}}\n\n---\nThis message was sent by {{sender}}{% if recipients is not empty %}, to the following recipients:{% for recipient in recipients %}\n\n\t{{recipient}}{% endfor %}{% else %}.{% endif %}
 
 name.deletion.policy.amount = up to {0} messages
 name.deletion.policy.period = for {0}
