--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -19,16 +19,16 @@ error.sender.not.saved = Configuração de Remetente não pode ser guardada:
 hint.email = alguem@exemplo.pt
 hint.email.list = alguem@exemplo.pt, ...
 hint.group.expression = Fórmula de Grupo
-hint.period = 1Y2M3D4H
+hint.period = nYnMnWnDTnHnMnS
 hint.sender.select = Seleccione um remetente
 
 label.actions = Outras Acções
 label.items = items
-label.message.bccs = Destinatários (Bcc)
-label.message.bccs.extra = Outros Destinatários (Bcc)
-label.message.bccs.extra.locale = Localização para Outros Destinatários
-label.message.body = Mensagem
+label.message.recipients = Destinatários
+label.message.recipients.single = Outros Destinatários
+label.message.locale.preferred = Localização Preferida
 label.message.body.html = Mensagem HTML
+label.message.body.text = Mensagem
 label.message.ccs = Destinatários (Cc)
 label.message.created = Criado
 label.message.locale = Localizações do Conteúdo
@@ -67,8 +67,9 @@ label.yes = Sim
 
 notification.message.sent = Esta mensagem está pendente para envio. Enquanto não for enviada poderá apagá-la, cancelando o processo.
 notification.template.empty = Este modelo de mensagem encontra-se vazio. Tentativas de envio irão falhar reportando um erro.
-notification.template.subject.empty = O assunto deste modelo de mensagem encontra-se vazio. Tentativas de envio irão falhar reportando um erro.
-notification.template.body.empty = O corpo deste modelo de mensagem encontra-se vazio. Tentativas de envio irão falhar reportando um erro.
+notification.template.empty.body = O corpo deste modelo de mensagem encontra-se vazio. Tentativas de envio irão falhar reportando um erro.
+notification.template.empty.subject = O assunto deste modelo de mensagem encontra-se vazio. Tentativas de envio irão falhar reportando um erro.
+notification.template.undeclared = Este modelo de mensagem não foi declarado no código da aplicação.
 
 title.message = Mensagem
 title.message.new = Nova Mensagem
