Initialize system sender consistently, closes #30
Additionally complement module bootstrap system sender section to match system sender default values

--- a/core/src/main/resources/MessagingResources_en.properties
+++ b/core/src/main/resources/MessagingResources_en.properties
@@ -27,9 +27,7 @@ error.sender.validation.policy.multiple = Multiple message storage policies spec
 error.sender.validation.recipient.invalid = Invalid recipient: {0}.
 error.sender.validation.replyTo.invalid = Invalid reply to address: {0}.
 
-hint.bootstrapper.systemsender.address = noreply@organization.com
-hint.bootstrapper.systemsender.group = #managers
-hint.bootstrapper.systemsender.name = System Messenger
+hint.bootstrapper.systemsender.group = Members are authorized to use the system sender in the messaging interface
 
 label.bootstrapper.systemsender.address = Address
 label.bootstrapper.systemsender.group = Sender Group
