--- a/core/src/main/resources/MessagingResources_pt.properties
+++ b/core/src/main/resources/MessagingResources_pt.properties
@@ -27,9 +27,7 @@ error.sender.validation.policy.multiple = Multiplas políticas de preservação de 
 error.sender.validation.recipient.invalid = Recipiente inválido: {0}.
 error.sender.validation.replyTo.invalid = Endereço de resposta inválido: {0}.
 
-hint.bootstrapper.systemsender.address = noreply@organization.com
-hint.bootstrapper.systemsender.group = #managers
-hint.bootstrapper.systemsender.name = Mensageiro de Sistema
+hint.bootstrapper.systemsender.group = Membros são autorizados a usar o remetente de sistema através da interface de envio de mensagens
 
 label.bootstrapper.systemsender.address = Endereço
 label.bootstrapper.systemsender.group = Grupo de Envio
