Rename MessageDeletionPolicy to MessageStoragePolicy which is more in line with it's method's names and usage Refactor other deletion policy mentions to storage policy Change MessageStoragePolicy string presentation Prevent NPE in MessageStoragePolicy.keep(Integer, Period) Add isKeepNone method to MessageStoragePolicy Refactor remaining mentions to unlimited policy to keepAll policy for consistency Optimize MessageStoragePolicy.pruneMessages and serialization methods Introduce keep none policy option in sender configuration interface Improve readability of sender and storage policy related interface labels and messages Prevent recipient related NPE on Sender creation and configuration Review SenderBean sender interacting methods purpose and accessibility Add Sender.available(User) to Sender public API

--- a/messaging-core/src/main/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/resources/MessagingResources_pt.properties
@@ -15,17 +15,16 @@ error.message.validation.recipient.erroneous = Uma expressão de destinatário não
 error.not.authorized = Não tem permissões para ver esta página
 error.template.malformed = Não foi possível compilar a template de mensagem com id "{0}".
 error.template.missing = Não foi possível encontrar a template de mensagem com id "{0}".
-error.sender.validation.address.empty = Endereço é necessário.
-error.sender.validation.address.invalid = Endereço tem de ser um endereço de e-mail válido.
-error.sender.validation.html.required = Permissão de envio de HTML é necessário.
-error.sender.validation.members.empty = Expressão de grupo de membros é necessária.
-error.sender.validation.members.invalid = Expressão de grupo de membros é inválida.
-error.sender.validation.name.empty = Nome é necessário.
-error.sender.validation.policy.empty = Política de preservação de mensagens é necessária.
+error.sender.validation.address.empty = Endereço do remetente é obrigatório.
+error.sender.validation.address.invalid = Endereço do remetente inválido.
+error.sender.validation.html.required = Permissão de envio de HTML é obrigatória.
+error.sender.validation.members.empty = Expressão de grupo de membros é obrigatória.
+error.sender.validation.members.invalid = Expressão de grupo de membros inválida.
+error.sender.validation.name.empty = Nome é obrigatório.
+error.sender.validation.policy.empty = Política de preservação de mensagens é obrigatória.
 error.sender.validation.policy.invalid = Política de preservação de mensagens inválida.
-error.sender.validation.policy.multiple = Multiplas políticas de preservação de mensagens especificadas.
 error.sender.validation.recipient.invalid = Recipiente inválido: {0}.
-error.sender.validation.replyTo.invalid = Endereço de resposta inválido: {0}.
+error.sender.validation.replyTo.invalid = Endereço de resposta inválido.
 
 hint.bootstrapper.systemsender.group = Membros são autorizados a usar o remetente de sistema através da interface de envio de mensagens
 
@@ -43,9 +42,11 @@ message.template.message.wrapper.parameter.subjectContent = O conteúdo do assunt
 message.template.message.wrapper.subject = {{subjectContent}}
 message.template.message.wrapper.text = {{textContent}}\n\n---\nEsta mensagem foi enviada em nome do(a) {{sender}}{% if recipients is not empty %}, para os seguintes destinatários:{% for recipient in recipients %}\n\n\t{{recipient}}{% endfor %}{% else %}.{% endif %}
 
-name.deletion.policy.amount = até {0} mensagens
-name.deletion.policy.period = durante {0}
-name.deletion.policy.unlimited = ilimitado
+name.storage.policy = Manter
+name.storage.policy.all = todas
+name.storage.policy.amount = até {0} mensagens
+name.storage.policy.none = nenhuma
+name.storage.policy.period = durante {0}
 
 title.bootstrapper = Sistema de Mensagens
 title.bootstrapper.systemsender = Remetente de Sistema
