--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -23,6 +23,8 @@ hint.period = nYnMnWnDTnHnMnS
 hint.sender.select = Select a sender
 
 label.actions = Other Actions
+label.disabled = Disabled
+label.enabled = Enabled
 label.items = items
 label.message.recipients = Recipients
 label.message.recipients.single = Other Recipients
@@ -45,6 +47,8 @@ label.message.subject = Subject
 label.message.tos = Recipients (To)
 label.no = No
 label.of = of
+label.off = Off
+label.on = On
 label.page = page
 label.sender.address = Address
 label.sender.group = Sender Group
@@ -52,14 +56,14 @@ label.sender.html = HTML Sending
 label.sender.members = Member Group Expression
 label.sender.name = Name
 label.sender.policy = Message Storage Policy
-label.sender.policy.amount = By amount:
-label.sender.policy.period = By period:
-label.sender.policy.unlimited = Unlimited
+label.sender.policy.all = All
+label.sender.policy.amount = At most:
+label.sender.policy.none = None
+label.sender.policy.period = For period:
 label.sender.recipients = Recipients
 label.sender.replyTo = Reply to
 label.show = show
 label.template.description = Description
-label.template.footer = Automatic Footer
 label.template.id = Key
 label.template.name = Name
 label.template.parameters = Parameters
