--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -23,6 +23,8 @@ hint.period = nYnMnWnDTnHnMnS
 hint.sender.select = Seleccione um remetente
 
 label.actions = Outras Acções
+label.disabled = Proibido
+label.enabled = Permitido
 label.items = items
 label.message.recipients = Destinatários
 label.message.recipients.single = Outros Destinatários
@@ -45,6 +47,8 @@ label.message.subject = Assunto
 label.message.tos = Destinatários (To)
 label.no = Não
 label.of = de
+label.off = Off
+label.on = On
 label.page = pág.
 label.sender.address = Endereço
 label.sender.group = Grupo de Envio
@@ -52,14 +56,14 @@ label.sender.html = Envio de HTML
 label.sender.members = Expressão do Grupo de Membros
 label.sender.name = Nome
 label.sender.policy = Política de Preservação de Mensagens
-label.sender.policy.amount = Por quantidade:
+label.sender.policy.all = Todas
+label.sender.policy.amount = No máximo:
+label.sender.policy.none = Nenhuma
 label.sender.policy.period = Por duração:
-label.sender.policy.unlimited = Ilimitada
 label.sender.recipients = Destinatários
 label.sender.replyTo = Responder para
 label.show = listar
 label.template.description = Descrição
-label.template.footer = Rodapé Automático
 label.template.id = Chave
 label.template.name = Nome
 label.template.parameters = Parâmetros
