--- a/messaging-core/src/main/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/resources/MessagingResources_en.properties
@@ -16,16 +16,15 @@ error.not.authorized = You do not have permission to view this page
 error.template.malformed = Message template with id "{0}" could not be compiled.
 error.template.missing = Message template with id "{0}" could not be found.
 error.sender.validation.address.empty = Address is required.
-error.sender.validation.address.invalid = Address must be a valid e-mail address.
-error.sender.validation.html.required = HTML sending permission is required.
-error.sender.validation.members.empty = Member group expression is required.
-error.sender.validation.members.invalid = Member group expression is invalid.
-error.sender.validation.name.empty = Name is required.
-error.sender.validation.policy.empty = Message storage policy is required.
-error.sender.validation.policy.invalid = Message storage policy is invalid.
-error.sender.validation.policy.multiple = Multiple message storage policies specified.
+error.sender.validation.address.invalid = Invalid sender address.
+error.sender.validation.html.required = HTML sending permission required.
+error.sender.validation.members.empty = Member group expression required.
+error.sender.validation.members.invalid = Invalid member group expression.
+error.sender.validation.name.empty = Name required.
+error.sender.validation.policy.empty = Message storage policy required.
+error.sender.validation.policy.invalid = Invalid message storage policy.
 error.sender.validation.recipient.invalid = Invalid recipient: {0}.
-error.sender.validation.replyTo.invalid = Invalid reply to address: {0}.
+error.sender.validation.replyTo.invalid = Invalid reply to address.
 
 hint.bootstrapper.systemsender.group = Members are authorized to use the system sender in the messaging interface
 
@@ -43,9 +42,11 @@ message.template.message.wrapper.parameter.subjectContent = The content of the m
 message.template.message.wrapper.subject = {{subjectContent}}
 message.template.message.wrapper.text = {{textContent}}\n\n---\nThis message was sent by {{sender}}{% if recipients is not empty %}, to the following recipients:{% for recipient in recipients %}\n\n\t{{recipient}}{% endfor %}{% else %}.{% endif %}
 
-name.deletion.policy.amount = up to {0} messages
-name.deletion.policy.period = for {0}
-name.deletion.policy.unlimited = unlimited
+name.storage.policy = keep
+name.storage.policy.all = all
+name.storage.policy.amount = up to {0} messages
+name.storage.policy.none = none
+name.storage.policy.period = for {0}
 
 title.bootstrapper = Messaging System
 title.bootstrapper.systemsender = System Sender
