Remove MessageSendingUrlBuilder class due to message recipient access control complications Remove unnecessary encoding in MessageBean Improve MessageBean validation Make MessageContentBean validation public Other minor improvements to MessageBean Improve sender update script in message sending page

--- a/messaging-core/src/main/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/resources/MessagingResources_en.properties
@@ -12,6 +12,7 @@ error.message.validation.recipients.empty = At least one recipient is required.
 error.message.validation.subject.empty = Subject is required.
 error.message.validation.sender.empty = Sender is required.
 error.message.validation.recipient.erroneous = A recipient expression could not be understood: {0}.
+error.message.validation.recipient.forbidden = Sender is not allowed to message recipient {0}.
 error.not.authorized = You do not have permission to view this page
 error.template.malformed = Message template with id "{0}" could not be compiled.
 error.template.missing = Message template with id "{0}" could not be found.
