--- a/messaging-core/src/main/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/resources/MessagingResources_pt.properties
@@ -11,7 +11,8 @@ error.message.validation.html.forbidden = Este remetente não está autorizado a e
 error.message.validation.recipients.empty = É necessário pelo menos um destinatário.
 error.message.validation.subject.empty = Assunto é necessário.
 error.message.validation.sender.empty = Remetente é necessário.
-error.message.validation.recipient.erroneous = Uma expressão de destinatário não foi compreendida: {0}.
+error.message.validation.recipient.erroneous = Uma expressão de destinatário não pode ser compreendida: {0}.
+error.message.validation.recipient.forbidden = Remetente não está autorizado a enviar mensagem para o destinatário {0}.
 error.not.authorized = Não tem permissões para ver esta página
 error.template.malformed = Não foi possível compilar a template de mensagem com id "{0}".
 error.template.missing = Não foi possível encontrar a template de mensagem com id "{0}".
