Take advantage of Pebble 2 features like automatic locale variable and sort filter Remove automatic translation of LocalizedStrings on compile Make MessageTemplate reify function public since declaration function was already public

--- a/messaging-core/src/main/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/resources/MessagingResources_en.properties
@@ -34,14 +34,14 @@ label.bootstrapper.systemsender.group = Sender Group
 label.bootstrapper.systemsender.name = Name
 
 message.template.message.wrapper.description = Wraps institutional messages sent via the message sending interface.
-message.template.message.wrapper.html = {{htmlContent}}
+message.template.message.wrapper.html = {{htmlContent.getContent(locale) | default(htmlContent.content)}}
 message.template.message.wrapper.parameter.htmlContent = The HTML content of the message.
 message.template.message.wrapper.parameter.recipients = The message's group recipients.
 message.template.message.wrapper.parameter.sender = Name of the message sender.
 message.template.message.wrapper.parameter.textContent = The plain text content of the message.
 message.template.message.wrapper.parameter.subjectContent = The content of the message subject.
-message.template.message.wrapper.subject = {{subjectContent}}
-message.template.message.wrapper.text = {{textContent}}\n\n---\nThis message was sent by {{sender}}{% if recipients is not empty %}, to the following recipients:{% for recipient in recipients %}\n\n\t{{recipient}}{% endfor %}{% else %}.{% endif %}
+message.template.message.wrapper.subject = {{subjectContent.getContent(locale) | default(subjectContent.content)}}
+message.template.message.wrapper.text = {{textContent.getContent(locale) | default(textContent.content)}}\n\n---\nThis message was sent by {{sender}}{% if recipients is not empty %}, to the following recipients:{% for recipient in recipients | sort %}\n\n\t{{recipient}}{% endfor %}{% else %}.{% endif %}
 
 name.storage.policy = keep
 name.storage.policy.all = all
