--- a/messaging-core/src/main/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/resources/MessagingResources_pt.properties
@@ -34,14 +34,14 @@ label.bootstrapper.systemsender.group = Grupo de Envio
 label.bootstrapper.systemsender.name = Nome
 
 message.template.message.wrapper.description = Envolve mensagens institucionais enviadas através da interface de envio de mensagens.
-message.template.message.wrapper.html = {{htmlContent}}
+message.template.message.wrapper.html = {{htmlContent.getContent(locale) | default(htmlContent.content)}}
 message.template.message.wrapper.parameter.htmlContent = O conteúdo HTML da mensagem.
 message.template.message.wrapper.parameter.recipients = Os grupos de destinatários da mensagem.
 message.template.message.wrapper.parameter.sender = O nome do remetente da mensagem.
 message.template.message.wrapper.parameter.textContent = O conteúdo textual simples da mensagem.
 message.template.message.wrapper.parameter.subjectContent = O conteúdo do assunto da mensagem.
-message.template.message.wrapper.subject = {{subjectContent}}
-message.template.message.wrapper.text = {{textContent}}\n\n---\nEsta mensagem foi enviada em nome do(a) {{sender}}{% if recipients is not empty %}, para os seguintes destinatários:{% for recipient in recipients %}\n\n\t{{recipient}}{% endfor %}{% else %}.{% endif %}
+message.template.message.wrapper.subject = {{subjectContent.getContent(locale) | default(subjectContent.content)}}
+message.template.message.wrapper.text = {{textContent.getContent(locale) | default(textContent.content)}}\n\n---\nEsta mensagem foi enviada em nome do(a) {{sender}}{% if recipients is not empty %}, para os seguintes destinatários:{% for recipient in recipients | sort %}\n\n\t{{recipient}}{% endfor %}{% else %}.{% endif %}
 
 name.storage.policy = Manter
 name.storage.policy.all = todas
