Various API and performance improvements
Rename Message user slot to creator
Add institutional message wrapper option to MessageBuilder
Move wrapper template declaration to MessageBuilder
Add complete set of message information parameters to wrapper template
Add sender setter to MessageBuilder to improve reusability
add address setter to SenderBuilder to improve reusability
Remove Message.isCreatorLoggedIn
Have Message.safeDelete throw on fail instead of returning boolean
Throw NullPointerException on Sender and MessageTemplate setters
Improve MessageStoragePolicy serialization logic
Reduce pointless MessageStoragePolicy instantiation using a cache

--- a/messaging-core/src/main/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/resources/MessagingResources_en.properties
@@ -34,16 +34,22 @@ label.bootstrapper.systemsender.group = Sender Group
 label.bootstrapper.systemsender.name = Name
 
 message.template.message.wrapper.description = Wraps institutional messages sent via the message sending interface.
-message.template.message.wrapper.html = {{htmlContent.getContent(locale) | default(htmlContent.content)}}
-message.template.message.wrapper.parameter.htmlContent = The HTML content of the message.
-message.template.message.wrapper.parameter.recipients = The message's group recipients.
-message.template.message.wrapper.parameter.sender = Name of the message sender.
-message.template.message.wrapper.parameter.textContent = The plain text content of the message.
-message.template.message.wrapper.parameter.subjectContent = The content of the message subject.
-message.template.message.wrapper.subject = {{subjectContent.getContent(locale) | default(subjectContent.content)}}
-message.template.message.wrapper.text = {{textContent.getContent(locale) | default(textContent.content)}}\n\n---\nThis message was sent by {{sender}}{% if recipients is not empty %}, to the following recipients:{% for recipient in recipients | sort %}\n\n\t{{recipient}}{% endfor %}{% else %}.{% endif %}
+message.template.message.wrapper.html = {{htmlBody.getContent(locale) | default(htmlBody.getContent(preferredLocale)) | default(htmlBody.content)}}
+message.template.message.wrapper.parameter.bccs = List of the message's BCC recipient groups.
+message.template.message.wrapper.parameter.ccs = List of the message's CC recipient groups.
+message.template.message.wrapper.parameter.creator = The user that created the message.
+message.template.message.wrapper.parameter.htmlBody = The HTML content of the message.
+message.template.message.wrapper.parameter.preferredLocale = The message's preferred content locale.
+message.template.message.wrapper.parameter.replyTo = The message's reply to address.
+message.template.message.wrapper.parameter.sender = The message sender.
+message.template.message.wrapper.parameter.singleBccs = List of the message's single BCC recipients' email addresses.
+message.template.message.wrapper.parameter.subject = The message subject.
+message.template.message.wrapper.parameter.textBody = The plain text content of the message.
+message.template.message.wrapper.parameter.tos = List of the message's To recipient groups.
+message.template.message.wrapper.subject = {{subject.getContent(locale) | default(subject.getContent(preferredLocale)) | default(subject.content)}}
+message.template.message.wrapper.text = {{textBody.getContent(locale) | default(textBody.getContent(preferredLocale)) | default(textBody.content)}}\n\n---\nThis message was sent by {{sender.name}}{% if bccs is not empty %}, to the following recipients:{% for bcc in bccs | sort %}\n\n\t{{bcc.presentationName}}{% endfor %}{% else %}.{% endif %}
 
-name.storage.policy = keep
+name.storage.policy = Keep
 name.storage.policy.all = all
 name.storage.policy.amount = up to {0} messages
 name.storage.policy.none = none
