--- a/messaging-core/src/main/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/resources/MessagingResources_pt.properties
@@ -34,14 +34,20 @@ label.bootstrapper.systemsender.group = Grupo de Envio
 label.bootstrapper.systemsender.name = Nome
 
 message.template.message.wrapper.description = Envolve mensagens institucionais enviadas através da interface de envio de mensagens.
-message.template.message.wrapper.html = {{htmlContent.getContent(locale) | default(htmlContent.content)}}
-message.template.message.wrapper.parameter.htmlContent = O conteúdo HTML da mensagem.
-message.template.message.wrapper.parameter.recipients = Os grupos de destinatários da mensagem.
-message.template.message.wrapper.parameter.sender = O nome do remetente da mensagem.
-message.template.message.wrapper.parameter.textContent = O conteúdo textual simples da mensagem.
-message.template.message.wrapper.parameter.subjectContent = O conteúdo do assunto da mensagem.
-message.template.message.wrapper.subject = {{subjectContent.getContent(locale) | default(subjectContent.content)}}
-message.template.message.wrapper.text = {{textContent.getContent(locale) | default(textContent.content)}}\n\n---\nEsta mensagem foi enviada em nome do(a) {{sender}}{% if recipients is not empty %}, para os seguintes destinatários:{% for recipient in recipients | sort %}\n\n\t{{recipient}}{% endfor %}{% else %}.{% endif %}
+message.template.message.wrapper.html = {{htmlBody.getContent(locale) | default(htmlBody.getContent(preferredLocale)) | default(htmlBody.content)}}
+message.template.message.wrapper.parameter.bccs =  Lista dos recipientes BCC da mensagem.
+message.template.message.wrapper.parameter.ccs = Lista dos recipientes CC da mensagem.
+message.template.message.wrapper.parameter.creator = O utilizador que criou a mensagem.
+message.template.message.wrapper.parameter.htmlBody = O conteúdo HTML da mensagem.
+message.template.message.wrapper.parameter.preferredLocale = A localização preferida para o conteúdo da mensagem.
+message.template.message.wrapper.parameter.replyTo = O endereço de resposta da mensagem.
+message.template.message.wrapper.parameter.sender = O remetente da mensagem.
+message.template.message.wrapper.parameter.singleBccs = Lista dos endereços de email dos recipientes BCC individuais da mensagem.
+message.template.message.wrapper.parameter.subject = O assunto da mensagem.
+message.template.message.wrapper.parameter.textBody = O conteúdo textual simples da mensagem.
+message.template.message.wrapper.parameter.tos = Lista dos recipientes To da mensagem.
+message.template.message.wrapper.subject = {{subject.getContent(locale) | default(subject.getContent(preferredLocale)) | default(subject.content)}}
+message.template.message.wrapper.text = {{textBody.getContent(locale) | default(textBody.getContent(preferredLocale)) | default(textBody.content)}}\n\n---\nEsta mensagem foi enviada em nome do(a) {{sender.name}}{% if bccs is not empty %}, para os seguintes destinatários:{% for bcc in bccs | sort %}\n\n\t{{bcc.presentationName}}{% endfor %}{% else %}.{% endif %}
 
 name.storage.policy = Manter
 name.storage.policy.all = todas
