Improve default configuration and functionality access
Change mailSender.max.recipients default to a more common value
Remove mail.debug and mailingList.host.name session parameters
Organize System Sender defaults
Limit Messaging Spring application and functionality access
    to users with available senders and managers

--- a/messaging-core/src/main/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/resources/MessagingResources_en.properties
@@ -32,6 +32,7 @@ hint.bootstrapper.systemsender.group = Members are authorized to use the system 
 label.bootstrapper.systemsender.address = Address
 label.bootstrapper.systemsender.group = Sender Group
 label.bootstrapper.systemsender.name = Name
+label.messaging.group.senders = Senders
 
 message.template.message.wrapper.description = Wraps institutional messages sent via the message sending interface.
 message.template.message.wrapper.html = {{htmlContent.getContent(locale) | default(htmlContent.content)}}
