Allow senders to send messages to ad hoc recipients Allow locking message interface to a specific sender
Recipients to be used in the message sending interface are now signed by the server using JWT.
Through these server provided recipient tokens it is now possile for a sender to send a message
to any recipient group. Use MessageBean::addAdHocRecipient to provide these tokens and
MessageBean::selectRecipient to pre-select a recipient in the interface. Direct usage of the
bean's setters is discouraged.
To prevent the current user of switching senders in situations where it does not make sense,
such as in the workflow of a role-specific sender task, it is now possible to lock the
interface to a pre-selected sender by using MessageBean::setLockedSender.

--- a/messaging-core/src/main/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/resources/MessagingResources_en.properties
@@ -3,16 +3,16 @@ error.bootstrapper.systemsender.address.invalid = Sender address is not valid.
 error.bootstrapper.systemsender.group.empty = Sender group is required.
 error.bootstrapper.systemsender.group.invalid = Sender group expression is not valid.
 error.bootstrapper.systemsender.name.empty = Sender name is required.
-error.message.validation.recipient.single.invalid = E-mail address is not valid: {0}.
-error.message.validation.message.empty = Message body is required.
 error.message.validation.html.forbidden = This sender is not allowed to send HTML messages.
+error.message.validation.message.empty = Message body is required.
+error.message.validation.recipient.single.invalid = E-mail address is not valid: {0}.
+error.message.validation.recipient.token.erroneous = The sender's authorization for a selected recipient could not be validated.
+error.message.validation.recipient.token.expired = The sender's authorization for a selected recipient has expired.
 error.message.validation.recipients.empty = At least one recipient is required.
-error.message.validation.subject.empty = Subject is required.
 error.message.validation.sender.empty = Sender is required.
-error.message.validation.recipient.erroneous = A recipient expression could not be understood: {0}.
-error.message.validation.recipient.forbidden = Sender is not allowed to message recipient {0}.
+error.message.validation.sender.user.forbidden = Current user cannot use the chosen sender.
+error.message.validation.subject.empty = Subject is required.
 error.not.authorized = You do not have permission to view this page
-error.template.malformed = Message template with id "{0}" could not be compiled.
 error.sender.validation.address.empty = Address is required.
 error.sender.validation.address.invalid = Invalid sender address.
 error.sender.validation.html.required = HTML sending permission required.
@@ -23,6 +23,7 @@ error.sender.validation.policy.empty = Message storage policy required.
 error.sender.validation.policy.invalid = Invalid message storage policy.
 error.sender.validation.recipient.invalid = Invalid recipient: {0}.
 error.sender.validation.replyTo.invalid = Invalid reply to address.
+error.template.malformed = Message template with id "{0}" could not be compiled.
 
 hint.bootstrapper.systemsender.group = Members are authorized to use the system sender in the messaging interface
 
