--- a/messaging-core/src/main/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/resources/MessagingResources_pt.properties
@@ -3,16 +3,16 @@ error.bootstrapper.systemsender.address.invalid = Endereço do remetente não é vá
 error.bootstrapper.systemsender.group.empty = Grupo de envio é necessário.
 error.bootstrapper.systemsender.group.invalid = Expressão do grupo de envio não é válida.
 error.bootstrapper.systemsender.name.empty = Nome do remetente é necessário.
-error.message.validation.recipient.single.invalid = Endereço de e-mail não é válido: {0}.
-error.message.validation.message.empty = Corpo da mensagem é necessário.
 error.message.validation.html.forbidden = Este remetente não está autorizado a enviar mensagens HTML.
+error.message.validation.message.empty = Corpo da mensagem é necessário.
+error.message.validation.recipient.single.invalid = Endereço de e-mail não é válido: {0}.
+error.message.validation.recipient.token.erroneous = A autorização do remetente para um dos recipientes selecionados não pôde ser validada.
+error.message.validation.recipient.token.expired = A autorização do remetente para um dos recipientes selecionados expirou.
 error.message.validation.recipients.empty = É necessário pelo menos um destinatário.
-error.message.validation.subject.empty = Assunto é necessário.
 error.message.validation.sender.empty = Remetente é necessário.
-error.message.validation.recipient.erroneous = Uma expressão de destinatário não pode ser compreendida: {0}.
-error.message.validation.recipient.forbidden = Remetente não está autorizado a enviar mensagem para o destinatário {0}.
+error.message.validation.sender.user.forbidden = Utilizador actual não pode utilizar o remetente escolhido.
+error.message.validation.subject.empty = Assunto é necessário.
 error.not.authorized = Não tem permissões para ver esta página
-error.template.malformed = Não foi possível compilar a template de mensagem com id "{0}".
 error.sender.validation.address.empty = Endereço do remetente é obrigatório.
 error.sender.validation.address.invalid = Endereço do remetente inválido.
 error.sender.validation.html.required = Permissão de envio de HTML é obrigatória.
@@ -23,6 +23,7 @@ error.sender.validation.policy.empty = Política de preservação de mensagens é ob
 error.sender.validation.policy.invalid = Política de preservação de mensagens inválida.
 error.sender.validation.recipient.invalid = Recipiente inválido: {0}.
 error.sender.validation.replyTo.invalid = Endereço de resposta inválido.
+error.template.malformed = Não foi possível compilar a template de mensagem com id "{0}".
 
 hint.bootstrapper.systemsender.group = Membros são autorizados a usar o remetente de sistema através da interface de envio de mensagens
 
