Message API should support String To addresses FMSG-9 #resolve

--- a/messaging-core/src/main/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/resources/MessagingResources_en.properties
@@ -41,6 +41,7 @@ message.template.message.wrapper.parameter.preferredLocale = The message's prefe
 message.template.message.wrapper.parameter.replyTo = The message's reply to address.
 message.template.message.wrapper.parameter.sender = The message sender.
 message.template.message.wrapper.parameter.singleBccs = List of the message's single BCC recipients' email addresses.
+message.template.message.wrapper.parameter.singleTos = List of the message's single TO recipients' email addresses.
 message.template.message.wrapper.parameter.subject = The message subject.
 message.template.message.wrapper.parameter.textBody = The plain text content of the message.
 message.template.message.wrapper.parameter.tos = List of the message's To recipient groups.
