--- a/messaging-core/src/main/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/resources/MessagingResources_pt.properties
@@ -41,6 +41,7 @@ message.template.message.wrapper.parameter.preferredLocale = A localização prefe
 message.template.message.wrapper.parameter.replyTo = O endereço de resposta da mensagem.
 message.template.message.wrapper.parameter.sender = O remetente da mensagem.
 message.template.message.wrapper.parameter.singleBccs = Lista dos endereços de email dos recipientes BCC individuais da mensagem.
+message.template.message.wrapper.parameter.singleTos = Lista dos endereços de email dos recipientes TO individuais da mensagem.
 message.template.message.wrapper.parameter.subject = O assunto da mensagem.
 message.template.message.wrapper.parameter.textBody = O conteúdo textual simples da mensagem.
 message.template.message.wrapper.parameter.tos = Lista dos recipientes To da mensagem.
