Improve senders UI FMSG-12 #resolve

--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -20,6 +20,7 @@ hint.email = someone@example.com
 hint.email.list = someone@example.com, ...
 hint.group.expression = Group Expression
 hint.period = nYnMnWnDTnHnMnS
+hint.sender.search = Search by name...
 hint.sender.select = Select a sender
 
 label.actions = Other Actions
@@ -88,6 +89,7 @@ title.sender.edit.new = Create Sender
 title.sender.system = System Sender
 title.senders = Senders
 title.senders.config = Sender Configuration
+title.senders.empty = Unable to find senders.
 title.senders.others = Other Senders
 title.templates.config = Message Template Configuration
 title.template = Message Template
