--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -20,6 +20,7 @@ hint.email = alguem@exemplo.pt
 hint.email.list = alguem@exemplo.pt, ...
 hint.group.expression = Fórmula de Grupo
 hint.period = nYnMnWnDTnHnMnS
+hint.sender.search = Procurar por nome...
 hint.sender.select = Seleccione um remetente
 
 label.actions = Outras Acções
@@ -88,6 +89,7 @@ title.sender.edit.new = Criar Remetente
 title.sender.system = Remetente de Sistema
 title.senders = Remetentes
 title.senders.config = Configuração de Remetentes
+title.senders.empty = Não foram encontrados remetentes.
 title.senders.others = Outros Remetentes
 title.templates.config = Configuração de Modelos de Mensagem
 title.template = Modelo de Mensagem
