Allow attachments when sending message FMSG-17 #resolve

--- a/messaging-core/src/main/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/resources/MessagingResources_en.properties
@@ -3,6 +3,7 @@ error.bootstrapper.systemsender.address.invalid = Sender address is not valid.
 error.bootstrapper.systemsender.group.empty = Sender group is required.
 error.bootstrapper.systemsender.group.invalid = Sender group expression is not valid.
 error.bootstrapper.systemsender.name.empty = Sender name is required.
+error.message.validation.file.forbidden = The current user doesn't have access to the following attachment: {0}
 error.message.validation.html.forbidden = This sender is not allowed to send HTML messages.
 error.message.validation.message.empty = Message body is required.
 error.message.validation.recipient.single.invalid = E-mail address is not valid: {0}.
