--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -92,3 +92,4 @@ title.senders.others = Outros Remetentes
 title.templates.config = Configuração de Modelos de Mensagem
 title.template = Modelo de Mensagem
 title.template.edit = Editar Modelo de Mensagem
+label.message.attachments=Anexos
