--- a/messaging-core/src/main/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/resources/MessagingResources_pt.properties
@@ -3,6 +3,7 @@ error.bootstrapper.systemsender.address.invalid = Endereço do remetente não é vá
 error.bootstrapper.systemsender.group.empty = Grupo de envio é necessário.
 error.bootstrapper.systemsender.group.invalid = Expressão do grupo de envio não é válida.
 error.bootstrapper.systemsender.name.empty = Nome do remetente é necessário.
+error.message.validation.file.forbidden=O utilizador atual não tem permissões de acesso para o anexo: {0}
 error.message.validation.html.forbidden = Este remetente não está autorizado a enviar mensagens HTML.
 error.message.validation.message.empty = Corpo da mensagem é necessário.
 error.message.validation.recipient.single.invalid = Endereço de e-mail não é válido: {0}.
