Allow attachments when sending message FMSG-17 #resolve

--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -27,6 +27,7 @@ label.actions = Other Actions
 label.disabled = Disabled
 label.enabled = Enabled
 label.items = items
+label.message.attachments = Attachments
 label.message.recipients = Recipients
 label.message.recipients.single = Other Recipients
 label.message.body.html = HTML Message
