Locked attachments and Sender upload permissions FMSG-27 #resolve

--- a/messaging-core/src/main/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/resources/MessagingResources_en.properties
@@ -16,6 +16,7 @@ error.message.validation.subject.empty = Subject is required.
 error.not.authorized = You do not have permission to view this page
 error.sender.validation.address.empty = Address is required.
 error.sender.validation.address.invalid = Invalid sender address.
+error.sender.validation.attachmentsEnabled.required = Attachments Uploading permission required.
 error.sender.validation.html.required = HTML sending permission required.
 error.sender.validation.members.empty = Member group expression required.
 error.sender.validation.members.invalid = Invalid member group expression.
