--- a/messaging-core/src/main/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/resources/MessagingResources_pt.properties
@@ -16,6 +16,7 @@ error.message.validation.subject.empty = Assunto é necessário.
 error.not.authorized = Não tem permissões para ver esta página
 error.sender.validation.address.empty = Endereço do remetente é obrigatório.
 error.sender.validation.address.invalid = Endereço do remetente inválido.
+error.sender.validation.attachmentsEnabled.required=Permissão de carregamento de anexos é obrigatória.
 error.sender.validation.html.required = Permissão de envio de HTML é obrigatória.
 error.sender.validation.members.empty = Expressão de grupo de membros é obrigatória.
 error.sender.validation.members.invalid = Expressão de grupo de membros inválida.
