--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -52,6 +52,7 @@ label.of = of
 label.off = Off
 label.on = On
 label.page = page
+label.sender.attachmentsEnabled=Attachments Uploading
 label.sender.address = Address
 label.sender.group = Sender Group
 label.sender.html = HTML Sending
