OptInRequired Sender FMSG-20 #resolve

--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -1,3 +1,4 @@
+action.add = Adicionar
 action.configure = Configurar
 action.create = Criar
 action.delete = Eliminar
@@ -7,6 +8,7 @@ action.new.sender = Novo Remetente
 action.new.message = Nova Mensagem
 action.send.message = Enviar
 action.show.template.info = Ver Detalhes
+action.remove = Remover
 action.reset.template = Restaurar Conteúdo Padrão
 action.save = Guardar
 action.view = Ver Detalhes
@@ -52,10 +54,13 @@ label.off = Off
 label.on = On
 label.page = pág.
 label.sender.address = Endereço
+label.sender.attachmentsEnabled=Carregamento de Anexos
 label.sender.group = Grupo de Envio
 label.sender.html = Envio de HTML
 label.sender.members = Expressão do Grupo de Membros
 label.sender.name = Nome
+label.sender.optInRequired = Confirmação de Permissões de Envio Obrigatória
+label.sender.optInStatus = Permitido
 label.sender.policy = Política de Preservação de Mensagens
 label.sender.policy.all = Todas
 label.sender.policy.amount = No máximo:
@@ -80,6 +85,9 @@ title.message = Mensagem
 title.message.new = Nova Mensagem
 title.messages = Mensagens
 title.messaging = Sistema de Mensagens
+title.messaging.optInConfig = Permissões de Envio de Mensagens
+title.messaging.optInConfig.defaultSenders = Remetentes Obrigatórios
+title.messaging.optInConfig.optInRequiredSenders = Remetentes Opcionais
 title.messaging.senders = Configuração de Remetentes
 title.messaging.sending = Envio de Mensagens
 title.messaging.templates = Configuração de Modelos de Mensagem
@@ -95,4 +103,4 @@ title.templates.config = Configuração de Modelos de Mensagem
 title.template = Modelo de Mensagem
 title.template.edit = Editar Modelo de Mensagem
 label.message.attachments=Anexos
-label.sender.attachmentsEnabled=Carregamento de Anexos
+
