--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -1,3 +1,4 @@
+action.add = Add
 action.configure = Configure
 action.create = Create
 action.delete = Delete
@@ -7,6 +8,7 @@ action.new.sender = New Sender
 action.new.message = New Message
 action.send.message = Send
 action.show.template.info = Show Details
+action.remove = Remove
 action.reset.template = Restore Defaults
 action.save = Save
 action.view = View Details
@@ -58,6 +60,8 @@ label.sender.group = Sender Group
 label.sender.html = HTML Sending
 label.sender.members = Member Group Expression
 label.sender.name = Name
+label.sender.optInRequired = Opt In Confirmation Required
+label.sender.optInStatus = Opted In Status
 label.sender.policy = Message Storage Policy
 label.sender.policy.all = All
 label.sender.policy.amount = At most:
@@ -82,6 +86,9 @@ title.message = Message
 title.message.new = New Message
 title.messages = Messages
 title.messaging = Messaging System
+title.messaging.optInConfig = Opt In Configuration
+title.messaging.optInConfig.defaultSenders = Mandatory Senders
+title.messaging.optInConfig.optInRequiredSenders = Optional Senders
 title.messaging.senders = Sender Configuration
 title.messaging.sending = Message Sending
 title.messaging.templates = Template Configuration
